--- a/VRChat/52/1284652.html
+++ b/VRChat/52/1284652.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "gtDimnrMxmjSbb4nRURApWO9NkOg0qzmqY6nzzH2Abs="></script>
+    "x7Ei/m8gyFB5ZSdD07okEyq/kjuQZNjneMBNWkg8Hz8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（額縁）画伯作品「とある夏の思い出」","description":"画伯作品「とある夏の思い出」のご紹介\nVRC向け3D画伯作品「とある夏の思い出」です。\n画伯である私が小学生のころ家族で行った海水浴の思い出を絵にしました。\n部屋に飾って一つのアクセントにしてもよし、アバターに持たせて芸術を布教するもよし、使い方は無限大！\n絵だけをくり抜いて使ったり額縁だけお使いいただいてもかまいません…改変はご自由に。\nShaderはお好きなものをご自身で設定してください。\n\n\n【内容物】\n・gakubuti Art FBX\n・gakubuti Art unitypackage\n・gakubuti Art PNG（テクスチャ）\n\n【利用規約】\n・著作権は作者であるKanかんが保有しています。\n・改変はご自由にどうぞ。\n・本データの再配布、販売は改変の有無を問わず禁止とします。\n・商標利用は可能です。","url":"https://booth.pm/ja/items/1284652","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6e8fc3f2-9b46-41cf-84e9-6e0e717b064e/i/1284652/3d016756-5f59-4c55-b420-cba16da3abed_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gtDimnrMxmjSbb4nRURApWO9NkOg0qzmqY6nzzH2Abs="></script>
+    nonce="x7Ei/m8gyFB5ZSdD07okEyq/kjuQZNjneMBNWkg8Hz8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1284652/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1284652/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
