--- a/VRChat/18/1284618.html
+++ b/VRChat/18/1284618.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "uyx6nl62sgyX+s0gVwLF9NU0T/7nQ2ZlF13xBe0wcf0="></script>
+    "8glQehd5rpgVkkzB7QHJsULus5nylG7xleNEYduTzdU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"稲荷寿司（おまけのお皿付き）","description":"稲荷寿司のご紹介\nVRC向け3Dモデルの稲荷寿司（お稲荷さん）を作りました。\n別ファイルにおまけとしてお皿もお付けします。\nShaderはお好きなものをご自身で設定してください。\n\n【内容物】\n・inarizusi FBX\n・inarizusi unitypackage\n・inarizusi PNG（テクスチャ）\n\n・osara FBX\n・oarasa unitypackage\n・osara PNG（テクスチャ）\n\n\n【利用規約】\n・著作権は作者であるKanかんが保有しています。\n・改変はご自由にどうぞ。\n・本データの再配布、販売は改変の有無を問わず禁止とします。\n・商標利用は可能です。","url":"https://booth.pm/ja/items/1284618","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6e8fc3f2-9b46-41cf-84e9-6e0e717b064e/i/1284618/16721598-b49c-4a03-a856-137436973f6a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uyx6nl62sgyX+s0gVwLF9NU0T/7nQ2ZlF13xBe0wcf0="></script>
+    nonce="8glQehd5rpgVkkzB7QHJsULus5nylG7xleNEYduTzdU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1284618/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1284618/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
