--- a/VRChat/86/1284586.html
+++ b/VRChat/86/1284586.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PwVzVxjr/0LtarFvbdXgZuFtmI6oaEIT2JNapNMHg90="></script>
+    "mb91cmD5hMThP/ZVi8VLbl2BcmV9kt8EVUuv8y6edmk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ウーフラン(Woflang)』v1.1","description":"狼モチーフなケモ耳ケモしっぽの元気溌剌な男の子の3Dモデルです！\n\n◇利用規約◇\n\n対象コンテンツの利用権利の販売となります。コンテンツを改変および任意メディアで利用することができます。\n\nただし下記を禁止します。\n・他人が利用できるようにし、著作者の販売を阻害すること。\n・コンテンツ自体に政治的または宗教的もしくは反社会的なメッセージを持たせること。\n\nその他\n・コンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。\n・利用権利は他人に譲渡することができません。\n\nこのライセンスにおける解説情報は下記になります。\nhttps://gitlab.com/towelfunnelvrc/towel-license/wikis/\n（タオルライセンス 販売用 version0.9）\n\n\n◇unitypackage導入前に◇\n\n・VRCSDK、Arktoon-Shaders、DynamicBone(任意)をImportしたうえでImportすること\n\n\n◇内容物◇\n\n・Woflang_v1.1.unitypackage\n┃\n┣・AvatarScene　――　DynamicBoneやVRChatアップロード用セットアップ済みモデルを配置したSceneファイル\n┃\n┣・Modelsフォルダ\n┃┃\n┃┣・Woflang.fbx　――　通常の3Dモデルファイル\n┃┃\n┃┗・Woflang_Parting.fbx　――　素体以外が別オブジェクトになっている3Dモデルファイル\n┃\n┣・Animationsフォルダ　――　AnimationOverrideやEmoteSwitch用のAnimation等\n┃\n┣・Materialsフォルダ　――　Material\n┃\n┗・Texturesフォルダ　――　Texture\n\n・Body_Mixed.psd　――　ざっくりレイヤー分けしたテクスチャデータ\n\n\n◇更新履歴\n\n　2020/06/19 v1.1\n　　・Unity2018対応\n　　・ウェイトを修正/調整\n　　・メインテクスチャを調整\n　　・マテリアルを調整\n　　・アニメーションを修正/調整\n\n","url":"https://booth.pm/ja/items/1284586","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2500"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1284586/50820a94-12b2-452e-9441-706d50a530ea_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PwVzVxjr/0LtarFvbdXgZuFtmI6oaEIT2JNapNMHg90="></script>
+    nonce="mb91cmD5hMThP/ZVi8VLbl2BcmV9kt8EVUuv8y6edmk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1284586/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1284586/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               113
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
